<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About PW Memo</string>
    <string name="about_file">file:///android_asset/about.html</string>
    <string name="add">Add</string>
    <string name="add_update">Add/Update</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="all_data_deleted">All data deleted.</string>
    <string name="app_name">PW Memo</string>
    <string name="app_name_edit">PW Memo (Edit/View)</string>
    <string name="app_name_export">PW Memo (Export)</string>
    <string name="app_name_import">PW Memo (Import)</string>
    <string name="app_name_master_password">PW Memo (Master Password)</string>
    <string name="app_name_mushroom">PW Memo (mushroom)</string>
    <string name="app_name_new">PW Memo (New)</string>
    <string name="app_name_preference">PW Memo (Preference)</string>
    <string name="autolock">Auto Lock</string>
    <string name="autolock_summary">If not been operated for some time then lock automatically.</string>
    <string name="autolock_timeout">Auto Lock Timeout</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_make_x">Cannot make "%s".</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_summary">Change master password</string>
    <string name="commit_change_q">Commit change?</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_password_does_not_match">The confirmation password does not match.</string>
    <string name="copy">Copy</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_userid">Copy User ID</string>
    <string name="copy_x">Copy %s</string>
    <string name="copy_x_password">Copy %s\&apos;s passowrd</string>
    <string name="define_master_password">Define a master password to protect your PwMemo data. This password is used to encrypt and decrypt your data.(4 characters or more)</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_this_item">Delete this item.</string>
    <string name="delete_all_summary">Delete all password and data.</string>
    <string name="edit">Edit</string>
    <string name="empty">No Data</string>
    <string name="exit">Exit</string>
    <string name="export">Export</string>
    <string name="export3">export...</string>
    <string name="export_email_etc">exports by using E-mail etc...</string>
    <string name="faild_writing_x">Failed writing (%s).</string>
    <string name="faild_read_x">Failed read (%s).</string>
    <string name="file_not_found">File not found.</string>
    <string name="file_read_error">File read error.</string>
    <string name="filename">file name</string>
    <string name="help">Help(Web)</string>
    <string name="help_url">http://android.toycode.com/smart/pwmemo/</string>
    <string name="import3">import...</string>
    <string name="import_email_etc">Import from E-mail etc...</string>
    <string name="import_ok">Import OK!</string>
    <string name="import_str">Import</string>
    <string name="insert_str">Insert</string>
    <string name="insert_password">Insert Password</string>
    <string name="insert_userid">Insert User ID</string>
    <string name="insert_info">All items are inserted. (except items that match all fields.)</string>
    <string name="input_masterpassword">Input master password</string>
    <string name="locked_message">Locked!</string>
    <string name="master_password">Master password</string>
    <string name="memo">Memo</string>
    <string name="merge">Merge</string>
    <string name="merge_info">The item with the same title and User ID is overwritten.</string>
    <string name="new_master_password">Plase enter new master password.</string>
    <string name="new_str">New</string>
    <string name="not_a_crypt_data">Not a crypt data.</string>
    <string name="ok">OK</string>
    <string name="old_password">Old Password</string>
    <string name="open_file3">Open file...</string>
    <string name="password">Password</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="password_does_not_match">Password does not match.</string>
    <string name="password_is_too_short">The password is too short.</string>
    <string name="please_set_export_password">Please set a password for export.</string>
    <string name="please_set_export_password_info">Please set a password for export. I recommend this is different from the master password.</string>
    <string name="please_set_import_password">Please set a password for import.</string>
    <string name="please_set_import_password_info">Please set a password for import. (Please set the same password as export.)</string>
    <string name="plase_set_master_password">Please set a master password.</string>
    <string name="read">Read</string>
    <string name="read_x_ok">Read %s OK.</string>
    <string name="save_as">Save as ...</string>
    <string name="select_folder">Select a folder</string>
    <string name="setting3">setting ...</string>
    <string name="timeout">timeout</string>
    <string name="title">Title</string>
    <string name="title_is_not_encrypted">Title is not encrypted.</string>
    <string name="update">Update</string>
    <string name="user_id">User ID</string>
    <string name="view_str">View</string>
    <string name="write_str">Write</string>
    <string name="write_x_ok">Wirte %s OK.</string>
    <string name="x_is_not_a_folder">"%s" is not a folder.</string>
</resources>
