<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
      android:icon="@android:drawable/ic_menu_manage"
      android:id="@+id/setting_menu_item"
      android:title="@string/setting3"
    />
    <item
      android:icon="@android:drawable/ic_menu_share"
      android:id="@+id/export_menu_item"
      android:title="@string/export3"
    />
    <item
      android:icon="@drawable/ic_menu_import"
      android:id="@+id/import_menu_item"
      android:title="@string/import3"
    />
    <item
      android:icon="@android:drawable/ic_menu_help"
      android:id="@+id/help_menu_item"
      android:title="@string/help"
    />
    <item
      android:icon="@android:drawable/ic_menu_info_details"
      android:id="@+id/about_menu_item"
      android:title="@string/about"
    />
</menu>
