<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dp"
  >
  <TextView 
	  android:id="@+id/export_password_textview" 
	  android:layout_alignParentLeft="true"
	  android:layout_alignParentTop="true"
	  android:layout_height="wrap_content"
	  android:layout_width="wrap_content"
	  android:text="@string/please_set_export_password_info"
	  />
  <EditText 
	  android:id="@+id/export_password_edittext" 
	  android:inputType="textNoSuggestions"
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/export_password_textview"
	  android:layout_height="wrap_content"
	  android:layout_width="fill_parent" 
	  android:layout_marginBottom="10dp"
	  />
   <Button 
	  android:id="@+id/write_file_button" 
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/export_password_edittext"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="10dp"
	  android:layout_width="fill_parent"
	  android:text="@string/save_as" 
	  />
   <TextView 
	  android:id="@+id/export_textview" 
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/write_file_button"
	  android:layout_height="wrap_content"
	  android:layout_width="wrap_content" 
	  android:text="@string/export_email_etc" 
	  />
 <Button 
	 android:id="@+id/export_button" 
	 android:layout_below="@id/export_textview"
	 android:layout_height="wrap_content"
	 android:text="@string/export" 
	 android:layout_width="fill_parent" android:layout_alignParentLeft="true"/>
</RelativeLayout>
