<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
    <RelativeLayout
      android:layout_height="fill_parent"
      android:layout_width="fill_parent"
      android:padding="10dp">
        <TextView
          android:id="@+id/import_password_textview"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/please_set_import_password_info"
        />
        <EditText
          android:id="@+id/import_password_edittext"
          android:inputType="textNoSuggestions"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/import_password_textview"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
        />
        <RadioGroup
          android:checkedButton="@+id/merge_radio"
          android:id="@+id/read_method_group"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/import_password_edittext"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content">
            <RadioButton
              android:id="@id/merge_radio"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/merge"
            />
            <RadioButton
              android:id="@+id/insert_radio"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/insert_str"
            />
        </RadioGroup>
        <TextView
          android:id="@+id/read_method_info_textview"
          android:layout_alignParentRight="true"
          android:layout_below="@id/import_password_edittext"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:layout_toRightOf="@id/read_method_group"
          android:layout_width="wrap_content"
          android:text="@string/merge_info"
        />
        <Button
          android:background="@drawable/button_bg"
          android:id="@+id/cancel_button"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/read_method_group"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/cancel"
          android:textSize="24sp"
        />
        <Button
          android:background="@drawable/button_bg"
          android:id="@+id/import_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/read_method_group"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/cancel_button"
          android:layout_width="wrap_content"
          android:text="@string/import3"
          android:textSize="24sp"
        />
    </RelativeLayout>
</ScrollView>
