<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
    <RelativeLayout
      android:layout_height="fill_parent"
      android:layout_width="fill_parent"
      android:padding="10dp">
        <TextView
          android:id="@+id/title_textview"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/title"
        />
        <EditText
          android:id="@+id/title_textedit"
          android:inputType="text"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@id/title_textview"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3dp"
          android:layout_width="fill_parent"
        />
        <TextView
          android:id="@+id/user_id_textview"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/title_textedit"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/user_id"
        />
        <Button
          android:id="@+id/copy_user_id_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/user_id_textview"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/copy"
        />
        <EditText
          android:id="@+id/user_id_edittext"
          android:inputType="text"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/user_id_textview"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3dp"
          android:layout_toLeftOf="@id/copy_user_id_button"
          android:layout_width="fill_parent"
        />
        <TextView
          android:id="@+id/password_textview"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/user_id_edittext"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/password"
        />
        <Button
          android:id="@+id/copy_passwword_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/password_textview"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/copy"
        />
        <EditText
          android:id="@+id/password_edittext"
          android:inputType="textNoSuggestions"
          android:layout_below="@id/password_textview"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3dp"
          android:layout_toLeftOf="@id/copy_passwword_button"
          android:layout_width="fill_parent"
        />
        <TextView
          android:id="@+id/memo_textview"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/password_edittext"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/memo"
        />
        <Button
          android:id="@+id/copy_memo_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/memo_textview"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/copy"
        />
        <EditText
          android:id="@+id/memo_edittext"
          android:inputType="textMultiLine"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/memo_textview"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3dp"
          android:layout_toLeftOf="@id/copy_memo_button"
          android:layout_width="wrap_content"
        />
        <Button
          android:background="@drawable/button_bg"
          android:id="@+id/cancel_button"
          android:layout_alignParentLeft="true"
          android:layout_below="@id/memo_edittext"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/cancel"
          android:textSize="24sp"
        />
        <Button
          android:background="@drawable/button_bg"
          android:id="@+id/ok_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/memo_edittext"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/ok"
          android:textSize="24sp"
        />
    </RelativeLayout>
</ScrollView>
