<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
    <RelativeLayout
      android:layout_height="fill_parent"
      android:layout_margin="10dp"
      android:layout_width="fill_parent">
        <TextView
          android:id="@+id/new_password_text_view"
          android:layout_alignParentLeft="true"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text="@string/new_master_password"
        />
        <TextView
          android:id="@+id/master_password_text_view"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/new_password_text_view"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:text="@string/master_password"
        />
        <EditText
          android:id="@+id/master_password_edit_text"
          android:inputType="textPassword"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/master_password_text_view"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text=""
        />
        <TextView
          android:id="@+id/confirmation_text_view"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/master_password_edit_text"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_width="wrap_content"
          android:text="@string/confirmation"
        />
        <EditText
          android:id="@+id/confirmation_edit_text"
          android:inputType="textPassword"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/confirmation_text_view"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:text=""
        />
        <Button
          android:background="@drawable/button_bg"
          android:id="@+id/ok_button"
          android:layout_alignParentRight="true"
          android:layout_below="@id/confirmation_edit_text"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/ok"
          android:textSize="24sp"
        />
    </RelativeLayout>
</ScrollView>
