<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dp"
  >
  <TextView 
	  android:id="@+id/import_password_textview" 
	  android:layout_alignParentLeft="true"
	  android:layout_alignParentTop="true"
	  android:layout_height="wrap_content"
	  android:layout_width="wrap_content"
	  android:text="@string/please_set_import_password_info"
	  />
  <EditText 
	  android:id="@+id/import_password_edittext" 
	  android:inputType="textNoSuggestions"
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/import_password_textview"
	  android:layout_height="wrap_content"
	  android:layout_width="fill_parent" 
	  android:layout_marginBottom="10dp"
	  />
  <TextView 
	  android:id="@+id/filename_textview" 
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/import_password_edittext"
	  android:layout_height="wrap_content"
	  android:layout_width="wrap_content" 
	  android:text="@string/filename" 
	  />
  <EditText 
	  android:id="@+id/filename_edittext" 
	  android:layout_alignParentLeft="true"
	  android:layout_below="@id/filename_textview"
	  android:layout_height="wrap_content"
	  android:layout_width="fill_parent" 
	  />
  <RadioGroup 
  	android:id="@+id/merge_method_group"
  	android:layout_height="wrap_content"
  	android:layout_width="fill_parent"
  	android:layout_alignParentLeft="true"
	android:layout_below="@id/filename_edittext"
	android:checkedButton="@+id/radio0"
  	>
      <RadioButton
      	android:text="RadioButton"
      	android:layout_height="wrap_content"
      	android:layout_width="wrap_content"
      	android:id="@+id/radio0"
      	android:checked="true"
      	/>
      <RadioButton
      	android:text="RadioButton"
      	android:layout_height="wrap_content"
      	android:layout_width="wrap_content"
      	android:id="@+id/radio1"
      	android:checked="true"
      	/>
      <RadioButton
      	android:text="RadioButton"
      	android:layout_height="wrap_content"
      	android:layout_width="wrap_content"
      	android:id="@+id/radio2"
      	android:checked="true"
      	/>
  </RadioGroup>
	  
  <Button 
	  android:id="@+id/read_file_button" 
	  android:layout_alignParentRight="true"
	  android:layout_below="@id/merge_method_group"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="10dp"
	  android:layout_width="wrap_content" android:text="@string/read"/>
</RelativeLayout>
